--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -170,12 +170,12 @@ SphereComponent=SphereComponent.Collision.Collision,
 TopDownCharacter_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 AIbot_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
-K2Node_VariableGet=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
+K2Node_VariableGet=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 ObjectProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
 FloatProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
 Perception_C=K2Node_VariableGet.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
-StructProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+StructProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
 BoolProperty=
 ArrayProperty=
 IntProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
@@ -196,6 +196,14 @@ MagicLeapSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.A
 TeleportOut_C=
 Teleport_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
 TextProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
+BaseAI_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
+K2Node_FunctionEntry=K2Node_FunctionEntry.Inputs.InputArgument0,
+RangedAI_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
+RangedController_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
+MoveWithinRange_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
+RangeFinder_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Static Switch Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
+MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Static Switch Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -219,13 +227,19 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/b024899h/Particle_Effects/Loot_Beams/2_Blue_Uncommon/Materials
+ContentBrowserTab1.SelectedPaths=/Game/AIAgent
 
 [EditorStartup]
-LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
+LastLevel=/Game/Levels/MechanicsLevel
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/AIAgent/BaseAI.BaseAI
+OpenAssetsAtExit=/Game/AIAgent/DerivedClasses/RangedAI.RangedAI
+OpenAssetsAtExit=/Game/AIAgent/CheckTargetDead.CheckTargetDead
+OpenAssetsAtExit=/Game/AIAgent/RangedController.RangedController
+OpenAssetsAtExit=/Game/AIAgent/Perception.Perception
+OpenAssetsAtExit=/Game/AIAgent/MoveToPlayer.MoveToPlayer
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2193,11 +2207,117 @@ TextRenderComponent.Cooking=True
 TextRenderComponent.Events=True
 TextProperty.Variable=True
 TextProperty.DefaultValueCategory=True
+RangedAI_C.Default=True
+RangedAI_C.Tick=True
+RangedAI_C.Character=True
+RangedAI_C.Camera=True
+RangedAI_C.Pawn=True
+RangedAI_C.Rendering=True
+RangedAI_C.Replication=True
+RangedAI_C.Input=True
+RangedAI_C.Actor=True
+K2Node_CallParentFunction.Graph=True
+RangedAI_C.TransformCommon=True
+RangedAI_C.Animation=True
+RangedAI_C.Mesh=True
+RangedAI_C.Physics=True
+RangedAI_C.Clothing=True
+RangedAI_C.Collision=True
+RangedAI_C.Lighting=True
+RangedAI_C.ClothingSimulation=True
+RangedAI_C.Tags=True
+RangedAI_C.Activation=True
+RangedAI_C.Cooking=True
+RangedAI_C.Character Movement: Jumping / Falling=True
+RangedAI_C.Character Movement (General Settings)=True
+RangedAI_C.Character Movement: Walking=True
+RangedAI_C.Character Movement: Swimming=True
+RangedAI_C.Character Movement: Flying=True
+RangedAI_C.Character Movement: Custom Movement=True
+RangedAI_C.Character Movement (Rotation Settings)=True
+RangedAI_C.Character Movement: Physics Interaction=True
+RangedAI_C.Character Movement (Networking)=True
+RangedAI_C.Character Movement=True
+RangedAI_C.Character Movement: Avoidance=True
+RangedAI_C.Character Movement: NavMesh Movement=True
+RangedAI_C.RootMotion=True
+RangedAI_C.NavMovement=True
+RangedAI_C.Velocity=True
+RangedAI_C.PlanarMovement=True
+RangedAI_C.MovementComponent=True
+RangedAI_C.Shape=True
+RangedAI_C.Navigation=True
+RangedAI_C.Materials=True
+Baseprojectile_C.Tick=True
+Baseprojectile_C.Rendering=True
+Baseprojectile_C.Replication=True
+Baseprojectile_C.Input=True
+Baseprojectile_C.Actor=True
+ProjectileMovementComponent.Variable=True
+ProjectileMovementComponent.Sockets=True
+ProjectileMovementComponent.Projectile=True
+ProjectileMovementComponent.ProjectileBounces=True
+ProjectileMovementComponent.ProjectileSimulation=True
+ProjectileMovementComponent.Homing=True
+ProjectileMovementComponent.Velocity=True
+ProjectileMovementComponent.PlanarMovement=True
+ProjectileMovementComponent.MovementComponent=True
+ProjectileMovementComponent.Tags=True
+ProjectileMovementComponent.ComponentReplication=True
+ProjectileMovementComponent.Activation=True
+ProjectileMovementComponent.Cooking=True
+ProjectileMovementComponent.Events=True
+RangedAI_C.Variable=True
+RangedAI_C.Sockets=True
+RangedAI_C.ComponentReplication=True
+RangedAI_C.Events=True
+RangedController_C.Tick=True
+RangedController_C.Default=True
+RangedController_C.AI=True
+RangedController_C.Controller=True
+RangedController_C.Replication=True
+RangedController_C.Input=True
+RangedController_C.Actor=True
+REINST_RangedController_C_350.Tick=True
+REINST_RangedController_C_350.None=True
+REINST_RangedController_C_350.AI=True
+REINST_RangedController_C_350.Controller=True
+REINST_RangedController_C_350.Rendering=True
+REINST_RangedController_C_350.Replication=True
+REINST_RangedController_C_350.Input=True
+REINST_RangedController_C_350.Actor=True
+REINST_RangedAI_C_354.None=True
+REINST_RangedAI_C_354.Tick=True
+REINST_RangedAI_C_354.Default=True
+REINST_RangedAI_C_354.Character=True
+REINST_RangedAI_C_354.Camera=True
+REINST_RangedAI_C_354.Pawn=True
+REINST_RangedAI_C_354.Rendering=True
+REINST_RangedAI_C_354.Replication=True
+REINST_RangedAI_C_354.Input=True
+REINST_RangedAI_C_354.Actor=True
+MoveWithinRange_C.Description=True
+MoveWithinRange_C.Task=True
+MoveWithinRange_New_C.Default=True
+MoveWithinRange_New_C.Description=True
+MoveWithinRange_New_C.Task=True
+CheckTargetDead_C.Default=True
+CheckTargetDead_C.Description=True
+CheckTargetDead_C.Service=True
+RangeFinder_C.Description=True
+RangeFinder_C.Service=True
+CheckPlayerDead_C.Default=True
+CheckPlayerDead_C.Description=True
+CheckPlayerDead_C.Task=True
+RangeFinder_C.Default=True
+MaterialEditorInstanceConstant.ParameterGroups=True
+MaterialEditorInstanceConstant.General=True
+MaterialEditorInstanceConstant.Previewing=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=1
 /Game/AIAgent/TargetInterface.TargetInterface=0
-/Game/AIAgent/ProtoAI.ProtoAI=0
+/Game/AIAgent/ProtoAI.ProtoAI=1
 /Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton.UE4_Mannequin_Skeleton=0
 /Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter=0
 /Game/Materials/BlueGreen.BlueGreen=0
@@ -2214,7 +2334,7 @@ TextProperty.DefaultValueCategory=True
 /Game/TopDownBP/Blueprints/TopDownController.TopDownController=1
 /Game/TopDownBP/Interfaces/PlayerInt.PlayerInt=1
 /Game/TopDownBP/Blueprints/PlayerController.PlayerController=1
-/Game/AIAgent/ProtoTree.ProtoTree=0
+/Game/AIAgent/ProtoTree.ProtoTree=1
 /Game/AIAgent/MOveToTarget.MoveToTarget=0
 /Game/AIAgent/Perception.Perception=0
 /Game/AIAgent/MoveToPlayer.MoveToPlayer=0
@@ -2240,25 +2360,35 @@ TextProperty.DefaultValueCategory=True
 /Game/GW000979/DataStruct/TargetDummy/TestDrop.TestDrop=1
 /Game/AIAgent/I_Damage.I_Damage=0
 /Game/GW000979/BasicTeleporter/Teleport.Teleport=1
+/Game/AIAgent/Baseprojectile.Baseprojectile=0
+/Game/AIAgent/DerivedClasses/RangedAI.RangedAI=0
+/Game/AIAgent/AttackPlayer.AttackPlayer=0
+/Game/AIAgent/CheckPlayerDead.CheckPlayerDead=0
+/Game/Mannequin/Character/Materials/M_UE4_RangeAI.M_UE4_RangeAI=0
+/Game/Mannequin/Character/Materials/M_UE4ExplodingAI.M_UE4ExplodingAI=0
+/Game/Mannequin/Character/Materials/M_UE4Man_Body.M_UE4Man_Body=0
+/Game/AIAgent/RangedTree.RangedTree=1
+/Game/AIAgent/MoveWithinRange.MoveWithinRange=1
+/Game/AIAgent/RangeFinder.RangeFinder=1
 
 [PluginBrowser]
 InstalledPlugins=Substance
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+Object="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" "
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+PrimitiveComponent=
+SceneComponent=
+ActorComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" "
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 DataAsset="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-AIbot_C=
+AIbot_C="\"Object.\" \"Object.\" "
 Character=
 Pawn=
 REINST_AIbot_C_315="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -2271,8 +2401,8 @@ BTNode=
 AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" "
 TestPawn_C="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 NewController_C="\"Object.Controller.Controller"
-AIController="\"Object.Default.DebugColour\" "
-Controller="\"Object.Default.DebugColour\" "
+AIController="\"Object.StateMachine\" \"Object.StateMachine\" "
+Controller="\"Object.StateMachine\" \"Object.StateMachine\" "
 REINST_TestPawn_C_579="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 TopDownCharacter_C=
 REINST_TestPawn_C_585="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -2306,6 +2436,15 @@ BTTaskNode=
 GeomModifier_Extrude="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
+BaseAI_C=
+RangedAI_C=
+RangedController_C="\"Object.StateMachine\" \"Object.StateMachine\" "
+BehaviorTreeGraphNode_Root="\"Object.AI.AI|BehaviorTree\" "
+BehaviorTreeGraphNode="\"Object.AI.AI|BehaviorTree\" "
+AIGraphNode="\"Object.AI.AI|BehaviorTree\" "
+EdGraphNode="\"Object.AI.AI|BehaviorTree\" "
+MoveWithinRange_C=
+RangeFinder_C=
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -3044,13 +3183,14 @@ WeldedVertices=True
 MapSkeletalMotionToRoot=False
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=BlueprintLog
 
 [PathColor]
 /Game/Levels=(R=1.000000,G=0.457670,B=0.000000,A=1.000000)
 /Game/Materials=(R=0.500000,G=0.240541,B=0.050361,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/AIAgent/DerivedClasses/RangedAI.RangedAI;
 RecentlyPlaced=/Game/GW000979/BasicTeleporter/Teleport.Teleport;
 RecentlyPlaced=/Game/GW000979/BasicTeleporter/TeleportOut.TeleportOut;
 RecentlyPlaced=/Game/SpawnActor/SpawnPoint.SpawnPoint;
@@ -3059,7 +3199,7 @@ RecentlyPlaced=/Game/StarterContent/Architecture/Wall_Door_400x400.Wall_Door_400
 RecentlyPlaced=/Game/TopDownBP/Interactexample/Door.Door;
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
-RecentlyPlaced=/Game/AIAgent/AIbot.AIbot;
+RecentlyPlaced=/Game/AIAgent/BaseAI.BaseAI;
 RecentlyPlaced=/Game/GW000979/DataStruct/TargetDummy/TargetDummy.TargetDummy;
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
 RecentlyPlaced=/Game/GW000979/ShaneToyeSprintTest.ShaneToyeSprintTest;
@@ -3070,7 +3210,6 @@ RecentlyPlaced=/Game/AIAgent/TestPawn.TestPawn;
 RecentlyPlaced=/Game/AIAgent/TestPawn2.TestPawn2;
 RecentlyPlaced=/Script/Engine.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 RecentlyPlaced=/Game/Geometry/Meshes/GrassMesh.GrassMesh;
-RecentlyPlaced=/Game/Geometry/Meshes/Grass.Grass;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -3121,26 +3260,26 @@ PaletteThumbnailScale=0.300000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AIAgent/AIbot
-MRUItem1=/Game/TopDownBP/Blueprints/TopDownGameMode
-MRUItem2=/Game/Levels/MechanicsLevel
-MRUItem3=/Game/SpawnActor/SpawnPoint
-MRUItem4=/Game/GW000979/BasicTeleporter/Teleport
-MRUItem5=/Game/TopDownBP/Interactexample/Door
-MRUItem6=/Game/TopDownBP/Interactexample/Switch
+MRUItem0=/Game/Mannequin/Character/Materials/M_UE4ExplodingAI
+MRUItem1=/Game/Mannequin/Character/Materials/M_UE4_RangeAI
+MRUItem2=/Game/Mannequin/Character/Materials/M_UE4Man_Body
+MRUItem3=/Game/AIAgent/DerivedClasses/RangedAI
+MRUItem4=/Game/AIAgent/CheckTargetDead
+MRUItem5=/Game/AIAgent/CheckPlayerDead
+MRUItem6=/Game/AIAgent/BTService_BlueprintBase_New
 MRUItem7=/Game/AIAgent/AttackPlayer
-MRUItem8=/Game/AIAgent/ProtoTree
-MRUItem9=/Game/AIAgent/Proto_controller
-MRUItem10=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem11=/Game/GW000979/DataStruct/TargetDummy/TargetDummy
-MRUItem12=/Game/AIAgent/I_Damage
-MRUItem13=/Game/AIAgent/TargetInterface
-MRUItem14=/Game/TopDownBP/Maps/TopDownExampleMap
-MRUItem15=/Game/GW000979/DataStruct/BaseWeapon
-MRUItem16=/Game/GW000979/DataStruct/TargetDummy/TestDrop
-MRUItem17=/Game/GW000979/DataStruct/Weapon_Struct
-MRUItem18=/Game/GW000979/DataStruct/WeaponDataTable
-MRUItem19=/Game/Chloe/UI/HUD_Proto
+MRUItem8=/Game/AIAgent/MoveWithinRange_New
+MRUItem9=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem10=/Game/AIAgent/BTTask_BlueprintBase_New
+MRUItem11=/Game/AIAgent/MoveToPlayer
+MRUItem12=/Game/AIAgent/Perception
+MRUItem13=/Game/AIAgent/RangedTree
+MRUItem14=/Game/AIAgent/RangedController
+MRUItem15=/Game/AIAgent/Baseprojectile
+MRUItem16=/Game/AIAgent/TargetInterface
+MRUItem17=/Game/AIAgent/ProtoTree
+MRUItem18=/Game/Levels/MechanicsLevel
+MRUItem19=/Game/AIAgent/AIbot
 
 [WidgetTemplatesExpanded]
 Extra=False
@@ -3167,5 +3306,45 @@ CoordSystem=1
 
 [SuppressableDialogs]
 ExtrudeCoordsWarning=False
+
+[MaterialInstanceEditor]
+bShowGrid=False
+bDrawGrid=False
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=1
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
 
 
