--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -227,7 +227,7 @@ ContentBrowserTab1.SelectedPaths=/Game/Models/Shannon
 LastLevel=/Game/Levels/MechanicsLevel
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2269,13 +2269,14 @@ FbxImportUI.Material=True
 /Game/AIAgent/I_Damage.I_Damage=0
 /Game/GW000979/BasicTeleporter/Teleport.Teleport=1
 /Game/Widgets/Ability_Wheel.Ability_Wheel=0
+/Game/Chloe/UI/HUD_Proto.HUD_Proto=0
 
 [PluginBrowser]
 InstalledPlugins=Substance
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object=
+Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
@@ -2335,18 +2336,19 @@ BTTaskNode=
 GeomModifier_Extrude="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
-Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
+Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PlayerController=
-Button="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
-ContentWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
-TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
-TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
+Button="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout"
+ContentWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout"
+TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout"
+TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout"
 Ability_Wheel_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+HUD_Proto_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -3165,25 +3167,25 @@ PreserveScaleRatio=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Widgets/Ability_Wheel
-MRUItem1=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem1=/Game/Chloe/UI/HUD_Proto
 MRUItem2=/Game/Levels/MechanicsLevel
-MRUItem3=/Game/AIAgent/AIbot
-MRUItem4=/Game/TopDownBP/Blueprints/TopDownGameMode
-MRUItem5=/Game/SpawnActor/SpawnPoint
-MRUItem6=/Game/GW000979/BasicTeleporter/Teleport
-MRUItem7=/Game/TopDownBP/Interactexample/Door
-MRUItem8=/Game/TopDownBP/Interactexample/Switch
-MRUItem9=/Game/AIAgent/AttackPlayer
-MRUItem10=/Game/AIAgent/ProtoTree
-MRUItem11=/Game/AIAgent/Proto_controller
-MRUItem12=/Game/GW000979/DataStruct/TargetDummy/TargetDummy
-MRUItem13=/Game/AIAgent/I_Damage
-MRUItem14=/Game/AIAgent/TargetInterface
-MRUItem15=/Game/TopDownBP/Maps/TopDownExampleMap
-MRUItem16=/Game/GW000979/DataStruct/BaseWeapon
-MRUItem17=/Game/GW000979/DataStruct/TargetDummy/TestDrop
-MRUItem18=/Game/GW000979/DataStruct/Weapon_Struct
-MRUItem19=/Game/GW000979/DataStruct/WeaponDataTable
+MRUItem3=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem4=/Game/AIAgent/AIbot
+MRUItem5=/Game/TopDownBP/Blueprints/TopDownGameMode
+MRUItem6=/Game/SpawnActor/SpawnPoint
+MRUItem7=/Game/GW000979/BasicTeleporter/Teleport
+MRUItem8=/Game/TopDownBP/Interactexample/Door
+MRUItem9=/Game/TopDownBP/Interactexample/Switch
+MRUItem10=/Game/AIAgent/AttackPlayer
+MRUItem11=/Game/AIAgent/ProtoTree
+MRUItem12=/Game/AIAgent/Proto_controller
+MRUItem13=/Game/GW000979/DataStruct/TargetDummy/TargetDummy
+MRUItem14=/Game/AIAgent/I_Damage
+MRUItem15=/Game/AIAgent/TargetInterface
+MRUItem16=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem17=/Game/GW000979/DataStruct/BaseWeapon
+MRUItem18=/Game/GW000979/DataStruct/TargetDummy/TestDrop
+MRUItem19=/Game/GW000979/DataStruct/Weapon_Struct
 
 [WidgetTemplatesExpanded]
 Extra=False
