--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -103,8 +103,8 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentRotGridSize=0
 
 [MRU]
-MRUItem0=/Game/Levels/MechanicsLevel
-MRUItem1=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem0=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem1=/Game/Levels/MechanicsLevel
 MRUItem2=/Game/Levels/TerrainMap
 MRUItem3=/Game/Levels/BlockOut
 
@@ -170,11 +170,11 @@ SphereComponent=SphereComponent.Collision.Collision,
 TopDownCharacter_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 AIbot_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
-K2Node_VariableGet=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
+K2Node_VariableGet=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 ObjectProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
 FloatProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
-Perception_C=K2Node_VariableGet.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
+Perception_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 StructProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 BoolProperty=
 ArrayProperty=
@@ -198,6 +198,7 @@ Teleport_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCat
 TextProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
 PlayerController=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
 Ability_Wheel_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
+RangeFinder_C=
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -221,13 +222,21 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Models/Shannon
+ContentBrowserTab1.SelectedPaths=/Game/AIAgent
 
 [EditorStartup]
-LastLevel=/Game/Levels/MechanicsLevel
+LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
+OpenAssetsAtExit=/Game/AIAgent/HybridAttacker.HybridAttacker
+OpenAssetsAtExit=/Game/AIAgent/ProtoAI.ProtoAI
+OpenAssetsAtExit=/Game/AIAgent/DerivedClasses/RangedAI.RangedAI
+OpenAssetsAtExit=/Game/AIAgent/DerivedClasses/HybridAI.HybridAI
+OpenAssetsAtExit=/Game/AIAgent/BTService_BlueprintBase_New.BTService_BlueprintBase_New
+OpenAssetsAtExit=/Game/AIAgent/AttackPlayer.AttackPlayer
+OpenAssetsAtExit=/Game/AIAgent/Perception.Perception
+OpenAssetsAtExit=/Game/AIAgent/RangeFinder.RangeFinder
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2221,6 +2230,101 @@ FbxImportUI.Transform=True
 FbxImportUI.Miscellaneous=True
 FbxImportUI.LodSettings=True
 FbxImportUI.Material=True
+RangedAI_C.Default=True
+RangedAI_C.Tick=True
+RangedAI_C.Character=True
+RangedAI_C.Camera=True
+RangedAI_C.Pawn=True
+RangedAI_C.Rendering=True
+RangedAI_C.Replication=True
+RangedAI_C.Input=True
+RangedAI_C.Actor=True
+RangedAI_C.Variable=True
+RangedAI_C.TransformCommon=True
+RangedAI_C.Sockets=True
+RangedAI_C.Animation=True
+RangedAI_C.Mesh=True
+RangedAI_C.Materials=True
+RangedAI_C.Clothing=True
+RangedAI_C.ClothingSimulation=True
+RangedAI_C.Physics=True
+RangedAI_C.Collision=True
+RangedAI_C.Lighting=True
+RangedAI_C.Tags=True
+RangedAI_C.ComponentReplication=True
+RangedAI_C.Activation=True
+RangedAI_C.Cooking=True
+RangedAI_C.Events=True
+StaticMesh.EditableMesh=True
+HybridAI_C.Default=True
+HybridAI_C.Tick=True
+HybridAI_C.Character=True
+HybridAI_C.Camera=True
+HybridAI_C.Pawn=True
+HybridAI_C.Rendering=True
+HybridAI_C.Replication=True
+HybridAI_C.Input=True
+HybridAI_C.Actor=True
+HybridAI_C.Variable=True
+HybridAI_C.TransformCommon=True
+HybridAI_C.Sockets=True
+HybridAI_C.Animation=True
+HybridAI_C.Mesh=True
+HybridAI_C.Materials=True
+HybridAI_C.Clothing=True
+HybridAI_C.ClothingSimulation=True
+HybridAI_C.Physics=True
+HybridAI_C.Collision=True
+HybridAI_C.Lighting=True
+HybridAI_C.Tags=True
+HybridAI_C.ComponentReplication=True
+HybridAI_C.Activation=True
+HybridAI_C.Cooking=True
+HybridAI_C.Events=True
+HybridController_C.Tick=True
+HybridController_C.Default=True
+HybridController_C.AI=True
+HybridController_C.Controller=True
+HybridController_C.Replication=True
+HybridController_C.Input=True
+HybridController_C.Actor=True
+REINST_HybridController_C_116.Tick=True
+REINST_HybridController_C_116.None=True
+REINST_HybridController_C_116.AI=True
+REINST_HybridController_C_116.Controller=True
+REINST_HybridController_C_116.Rendering=True
+REINST_HybridController_C_116.Replication=True
+REINST_HybridController_C_116.Input=True
+REINST_HybridController_C_116.Actor=True
+RangedAI_C.Character Movement: Jumping / Falling=True
+RangedAI_C.Character Movement (General Settings)=True
+RangedAI_C.Character Movement: Walking=True
+RangedAI_C.Character Movement: Swimming=True
+RangedAI_C.Character Movement: Flying=True
+RangedAI_C.Character Movement: Custom Movement=True
+RangedAI_C.Character Movement (Rotation Settings)=True
+RangedAI_C.Character Movement: Physics Interaction=True
+RangedAI_C.Character Movement (Networking)=True
+RangedAI_C.Character Movement=True
+RangedAI_C.Character Movement: Avoidance=True
+RangedAI_C.Character Movement: NavMesh Movement=True
+RangedAI_C.RootMotion=True
+RangedAI_C.NavMovement=True
+RangedAI_C.Velocity=True
+RangedAI_C.PlanarMovement=True
+RangedAI_C.MovementComponent=True
+RangedAI_C.Shape=True
+RangedAI_C.Navigation=True
+RangeFinder_C.Default=True
+RangeFinder_C.Description=True
+RangeFinder_C.Service=True
+RangedController_C.Tick=True
+RangedController_C.Default=True
+RangedController_C.AI=True
+RangedController_C.Controller=True
+RangedController_C.Replication=True
+RangedController_C.Input=True
+RangedController_C.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=1
@@ -2270,13 +2374,18 @@ FbxImportUI.Material=True
 /Game/GW000979/BasicTeleporter/Teleport.Teleport=1
 /Game/Widgets/Ability_Wheel.Ability_Wheel=0
 /Game/Chloe/UI/HUD_Proto.HUD_Proto=0
+/Game/Models/Shannon/body_WIP.body_WIP=0
+/Game/AIAgent/AIController_I.AIController_I=0
+/Game/AIAgent/RangedController.RangedController=0
+/Game/AIAgent/HybridController.HybridController=0
+/Game/AIAgent/RangedTree.RangedTree=0
 
 [PluginBrowser]
 InstalledPlugins=Substance
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Object=
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
@@ -2289,11 +2398,11 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 AIbot_C=
-Character="\"Object.IsMenuActive\" \"Object.IsMenuActive\" "
-Pawn="\"Object.IsMenuActive\" \"Object.IsMenuActive\" "
+Character=
+Pawn=
 REINST_AIbot_C_315="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_AIbot_C_376="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
-Perception_C=
+Perception_C="\"Object.TargetEnemy\" \"Object.TargetEnemy\" "
 BTService_BlueprintBase=
 BTService=
 BTAuxiliaryNode=
@@ -2302,7 +2411,7 @@ AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Percept
 TestPawn_C="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 NewController_C="\"Object.Controller.Controller"
 AIController="\"Object.Default.DebugColour\" "
-Controller=
+Controller="\"Object.Default.DebugColour\" "
 REINST_TestPawn_C_579="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 TopDownCharacter_C="\"Object.IsMenuActive\" \"Object.IsMenuActive\" "
 REINST_TestPawn_C_585="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -2349,6 +2458,13 @@ TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font
 Ability_Wheel_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 HUD_Proto_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+HybridController_C="\"Object.Default.DebugColour\" "
+BehaviorTreeGraphNode_Root="\"Object.AI.AI|BehaviorTree\" "
+BehaviorTreeGraphNode="\"Object.AI.AI|BehaviorTree\" "
+AIGraphNode="\"Object.AI.AI|BehaviorTree\" "
+EdGraphNode="\"Object.AI.AI|BehaviorTree\" "
+RangeFinder_C=
+RangedController_C="\"Object.Default.DebugColour\" "
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -2374,7 +2490,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/s017290g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/Levels
+UNR=../../../../../../Users/t019847g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBX=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBXAnim=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -3048,6 +3164,8 @@ HierarchicalLODUtilities.TimeStamp=2018.09.20-07.56.12
 HierarchicalLODUtilities.LastCompileMethod=Unknown
 SequencerWidgets.TimeStamp=2018.09.20-07.56.18
 SequencerWidgets.LastCompileMethod=Unknown
+StaticMeshEditor.TimeStamp=2018.09.20-07.56.19
+StaticMeshEditor.LastCompileMethod=Unknown
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -3089,13 +3207,14 @@ WeldedVertices=True
 MapSkeletalMotionToRoot=False
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=PIE
 
 [PathColor]
 /Game/Levels=(R=1.000000,G=0.457670,B=0.000000,A=1.000000)
 /Game/Materials=(R=0.500000,G=0.240541,B=0.050361,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/AIAgent/DerivedClasses/RangedAI.RangedAI;
 RecentlyPlaced=/Game/Models/Shannon/body_WIP.body_WIP;
 RecentlyPlaced=/Game/GW000979/BasicTeleporter/Teleport.Teleport;
 RecentlyPlaced=/Game/GW000979/BasicTeleporter/TeleportOut.TeleportOut;
@@ -3115,7 +3234,6 @@ RecentlyPlaced=/Game/GW000979/DataStruct/BaseWeapon.BaseWeapon;
 RecentlyPlaced=/Game/AIAgent/TestPawn.TestPawn;
 RecentlyPlaced=/Game/AIAgent/TestPawn2.TestPawn2;
 RecentlyPlaced=/Script/Engine.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_14
-RecentlyPlaced=/Game/Geometry/Meshes/GrassMesh.GrassMesh;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -3166,26 +3284,26 @@ PaletteThumbnailScale=0.300000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Widgets/Ability_Wheel
-MRUItem1=/Game/Chloe/UI/HUD_Proto
-MRUItem2=/Game/Levels/MechanicsLevel
-MRUItem3=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem4=/Game/AIAgent/AIbot
-MRUItem5=/Game/TopDownBP/Blueprints/TopDownGameMode
-MRUItem6=/Game/SpawnActor/SpawnPoint
-MRUItem7=/Game/GW000979/BasicTeleporter/Teleport
-MRUItem8=/Game/TopDownBP/Interactexample/Door
-MRUItem9=/Game/TopDownBP/Interactexample/Switch
-MRUItem10=/Game/AIAgent/AttackPlayer
-MRUItem11=/Game/AIAgent/ProtoTree
-MRUItem12=/Game/AIAgent/Proto_controller
-MRUItem13=/Game/GW000979/DataStruct/TargetDummy/TargetDummy
-MRUItem14=/Game/AIAgent/I_Damage
-MRUItem15=/Game/AIAgent/TargetInterface
-MRUItem16=/Game/TopDownBP/Maps/TopDownExampleMap
-MRUItem17=/Game/GW000979/DataStruct/BaseWeapon
-MRUItem18=/Game/GW000979/DataStruct/TargetDummy/TestDrop
-MRUItem19=/Game/GW000979/DataStruct/Weapon_Struct
+MRUItem0=/Game/AIAgent/BTService_BlueprintBase_New
+MRUItem1=/Game/AIAgent/HybridAttacker
+MRUItem2=/Game/AIAgent/Proto_controller
+MRUItem3=/Game/AIAgent/AIController_I
+MRUItem4=/Game/AIAgent/RangedController
+MRUItem5=/Game/AIAgent/RangeFinder
+MRUItem6=/Game/AIAgent/Perception
+MRUItem7=/Game/AIAgent/AttackPlayer
+MRUItem8=/Game/AIAgent/HybridController
+MRUItem9=/Game/AIAgent/DerivedClasses/HybridAI
+MRUItem10=/Game/Models/Shannon/body_WIP
+MRUItem11=/Game/AIAgent/DerivedClasses/RangedAI
+MRUItem12=/Game/AIAgent/RangedTree
+MRUItem13=/Game/Widgets/Ability_Wheel
+MRUItem14=/Game/Chloe/UI/HUD_Proto
+MRUItem15=/Game/Levels/MechanicsLevel
+MRUItem16=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem17=/Game/AIAgent/AIbot
+MRUItem18=/Game/TopDownBP/Blueprints/TopDownGameMode
+MRUItem19=/Game/SpawnActor/SpawnPoint
 
 [WidgetTemplatesExpanded]
 Extra=False
